Closed
Bug 235272
Opened 21 years ago
Closed 21 years ago
RFind is broken [was: Thunderbird treats two-letter folder msf files as folders themselves]
Categories
(Core :: XPCOM, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.7beta
People
(Reporter: pufiad, Assigned: darin.moz)
References
Details
Attachments
(1 file)
|
5.87 KB,
patch
|
jst
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla Thunderbird 0.5+ (20040222)
The latest nightly builds of Thunderbird no longer treat two-letter email
folders correctly. Until nightly build 20040210 or 20040219 I had no problem
with two-letter email folders, such as NA or ZZ. The latest nighly builds at
startup generate NA.msf.msf, ZZ.msf.msf and ZZ.sbd.msf files and show NA.msf,
ZZ.sbd and ZZ.msf as regular email folders in the GUI.
I removed the panacea file and the wrong files, but Thunderbird generates them
every time I select the folder to see the messages it contains.
Reproducible: Always
Steps to Reproduce:
1. Create a two-letter email folder in the GUI.
2. Select it to see the messages it contains.
3. Restart Thunderbird.
Actual Results:
If the two-letter folder is a regular email folder, it generates a .msf.msf file.
If the two-letter folder is a sub-directory, it generates two files:
.msf.msf
.sbd.msf
Setting it to major, because it is an important bug. Set it back if necessary.
Comment 1•21 years ago
|
||
I see this too. I wonder if it's string related...
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 2•21 years ago
|
||
I'll confirm as well. I saw this for the first time with:
Mozilla Thunderbird 0.5+ (20040221)
though I haven't updated since I believe the 14th or 15th.
So I do see it falling in the timeframe of Darin's checkin (Bug 231995 I think).
Comment 3•21 years ago
|
||
tracked it down to RFind in the obsolete string routines -> Darin.
Assignee: bienvenu → darin
Status: ASSIGNED → NEW
| Assignee | ||
Comment 4•21 years ago
|
||
-> string component
Severity: major → critical
Status: NEW → ASSIGNED
Component: Mail Database → String
Product: MailNews → Browser
Target Milestone: --- → mozilla1.7beta
| Assignee | ||
Comment 5•21 years ago
|
||
patch + testcases
| Assignee | ||
Updated•21 years ago
|
Attachment #142270 -
Flags: superreview?(dbaron)
Attachment #142270 -
Flags: review?(dbaron)
| Assignee | ||
Updated•21 years ago
|
Summary: Thunderbird treats two-letter folder msf files as folders themselves → RFind is broken [was: Thunderbird treats two-letter folder msf files as folders themselves]
Comment 6•21 years ago
|
||
*** Bug 235987 has been marked as a duplicate of this bug. ***
Comment 7•21 years ago
|
||
*** Bug 236095 has been marked as a duplicate of this bug. ***
Comment 8•21 years ago
|
||
dbaron is out of town at a w3c meeting for a while. Maybe we can get some
differnt reviewers on this so we can get it checked in.
| Assignee | ||
Updated•21 years ago
|
Attachment #142270 -
Flags: review?(dbaron) → review?(jst)
Comment 9•21 years ago
|
||
Comment on attachment 142270 [details] [diff] [review]
v1 patch
r=jst
Attachment #142270 -
Flags: review?(jst) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #142270 -
Flags: superreview?(dbaron) → superreview?(bienvenu)
Updated•21 years ago
|
Attachment #142270 -
Flags: superreview?(bienvenu) → superreview+
| Assignee | ||
Comment 10•21 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•4 years ago
|
Component: String → XPCOM
You need to log in
before you can comment on or make changes to this bug.
Description
•