fixes bug 235272 "RFind is broken [was: Thunderbird treats two-letter folder msf files as folders themselves]" r=jst sr=bienvenu